 <resources>
    <string name="app_name">My Application</string>
    <string name="hola_mundo">Hola mundo!</string>
    <string name="mi_boton">mi boton</string>
    <string name="usuario">usuario</string>
    <string name="contrase_a">/contrase_a</string>
    <string name="sign_up">sign_up</string>
    <string name="contrasena">contrasena</string>
    <string name="inicio_de_sesion">inicio de sesion</string>
    <string name="iniciar_sesion">/iniciar sesion</string>
    <string name="inicias_sesion">inicias sesion</string>
    <string name="continuar_con_google">Continuar con Google</string>
    <string name="haz_olvidado_tu_contrase_a">Haz olvidado tu contraseña</string>
    <string name="pets">Pets</string>
    <string name="petlovers">PetLovers</string>
    <string name="petlovers_3">PetLovers :3</string>
    <string name="nombre">Nombre:</string>
    <string name="edad">Edad:</string>
    <string name="raza">Raza:</string>
    <string name="gato_perro">Gato/Perro</string>
    <string name="descripci_n">Descripción:</string>
    <string name="pararfo1">
"En el mundo de las huellas, peludos y ronroneos, mi corazón late más fuerte. Cada paciente de cuatro patas es un pequeño milagro, y mi misión es cuidarlos con amor, compasión y ternura. En nuestra cita, prometo brindar a tus queridas mascotas el cuidado que merecen, y a ti, una dosis extra de cariño y consejos para mantenerlos saludables y felices. Juntos, crearemos un lazo especial que hará que sus colitas no dejen de moverse de alegría. ¡Te espero en mi clínica para compartir este hermoso viaje juntos!"</string>
    <string name="agendar">Agendar</string>
     <string name="nuestras_citas">Nuestras citas</string>
 </resources>