<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".MainActivity">
    <TextView
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/petlovers_3"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:textStyle="bold"
        />

    <ImageView
        android:src="@drawable/perro"
        android:layout_width="@dimen/_200dp"
        android:layout_height="@dimen/_200dp"
        android:layout_gravity="center"

        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        />
    <EditText
        android:hint ="@string/usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_20dp"
        android:layout_marginRight="@dimen/_20dp"
        android:layout_marginBottom="10dp"   />

    <EditText
        android:hint="@string/contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_20dp"
        android:layout_marginRight="@dimen/_20dp"
        android:layout_marginBottom="30dp"/>
    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/inicias_sesion"
        android:layout_marginBottom="5dp"/>
    <Button
        android:id="@+id/btno"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/continuar_con_google"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:textColor="@color/redd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/haz_olvidado_tu_contrase_a"
        android:layout_gravity="center"
        android:textSize="15dp"/>


</LinearLayout>
