<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/beigh"
    tools:context=".ui.MainActivity2">

        <TextView

            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bienvenido"
            android:layout_marginLeft="@dimen/_95dp"
            android:layout_marginRight="@dimen/_50dp"
            android:textSize="20sp"

            android:textStyle="bold"


            android:layout_marginBottom="-22dp"/>
        <TextView

            android:id="@+id/txtNameUser"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_gravity="center"
            android:textSize="20sp"

             android:textStyle="bold"


           />

        <TextView

            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Digita los datos de tu mascota"
            android:layout_gravity="center"
            android:textSize="20sp"

            android:textStyle="italic"


            android:layout_marginBottom="-40dp"/>

        <ImageView

            android:src="@drawable/huellas1"
            android:layout_width="@dimen/_80dp"
            android:layout_height="@dimen/_60dp"
            tools:ignore="RtlHardcoded" />
        <ImageView
            android:src="@drawable/gatito"

            android:layout_width="@dimen/_200dp"
            android:layout_height="@dimen/_100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_20dp"
            />



        <EditText
            android:hint="@string/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_10dp"/>

        <EditText
            android:hint="@string/edad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_10dp"/>

        <EditText
            android:hint="@string/raza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <EditText
            android:hint="@string/gato_perro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_10dp"/>
        <EditText
            android:hint="@string/descripci_n"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_10dp"/>
        <Button
            android:id="@+id/btnd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48dp"
            android:text="Solicitar"
           android:layout_marginBottom="-30dp"/>
        <ImageView
            android:src="@drawable/veterinario"
            android:layout_gravity="right"
            android:layout_width="@dimen/_90dp"
            android:layout_height="@dimen/_60dp"
            android:layout_marginBottom="@dimen/_50dp"

            />
        <ImageView
            android:src="@drawable/mundo"
            android:layout_gravity="left"
            android:layout_width="@dimen/_160dp"
            android:layout_height="@dimen/_200dp"

         />

    </LinearLayout>
